fix: ajuste do banco de dados

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Challenge Resilia",
+  "name":"challenge-resilia",
   "version": "1.0.0",
   "description": "challenge-resilia-api",
   "main": "app.js",
